@@ -1,3 +1,11 @@
+2017-05-11  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR fortran/78659
+	* gfortran.dg/namelist_91.f90: New test.
+	* gfortran.dg/namelist_92.f90: New test.
+	* gfortran.dg/namelist_93.f90: New test.
+	* gfortran.dg/namelist_94.f90: New test.
+
 2017-05-11  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	PR target/80695
